--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Brotli==1.0.9
 click==8.0.3
 colorama==0.4.4
-dash==2.0.0
+dash>=2.5.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
@@ -10,9 +10,9 @@ Flask-Compress==1.10.1
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
-MarkupSafe==2.0.1
-numpy
-pandas==1.3.4
+MarkupSafe>=2.1.3
+numpy==1.23.5
+pandas==1.5.3
 plotly==5.4.0
 python-dateutil==2.8.2
 pytz==2021.3
