--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pandas==1.5.3
 plotly==5.4.0
 python-dateutil==2.8.2
 pytz==2021.3
+scikit-learn==1.3.0
 six==1.16.0
 tenacity==8.0.1
 Werkzeug==2.0.2
